--- a/style.less
+++ b/style.less
@@ -134,3 +134,18 @@
         }
     }
 }
+
+.confbox
+{
+    background: rgba(255,255,255,0.7);
+    border: 1px solid white;
+    border-radius: 15px;
+    padding: 20px;
+    visibility:hidden;
+    width:300px;
+    z-index:999;
+    position:fixed;
+    display:block;
+    top:30%;
+    left:30%;
+}
