Refactoring for release

--- a/style.less
+++ b/style.less
@@ -25,10 +25,10 @@
             }
             cursor: auto;
 
-            .deleteBookmark{
+            .deleteBookmark {
                 padding: 2px;
-                border: 1px solid rgba(255,0,0,0.2);
-                background: rgba(255,0,0,0.1);
+                border: 1px solid rgba(255, 0, 0, 0.2);
+                background: rgba(255, 0, 0, 0.1);
                 border-radius: 4px;
                 font-size: 0.8em;
                 color: gray;
@@ -134,17 +134,16 @@
     }
 }
 
-.confbox
-{
-    background: rgba(255,255,255,0.7);
+.confbox {
+    background: rgba(255, 255, 255, 0.7);
     border: 1px solid white;
     border-radius: 15px;
     padding: 20px;
-    visibility:hidden;
-    width:300px;
-    z-index:999;
-    position:fixed;
-    display:block;
-    top:30%;
-    left:30%;
+    visibility: hidden;
+    width: 300px;
+    z-index: 999;
+    position: fixed;
+    display: block;
+    top: 30%;
+    left: 30%;
 }
