--- a/settings.less
+++ b/settings.less
@@ -20,3 +20,19 @@
 
     }
 }
+
+.controls{
+    input {
+        padding: 5px;
+        border: 1px solid gray;
+        border-radius: 5px;
+        margin: 5px;
+    }
+    margin: 15px 10px;
+}
+
+#status{
+    height: 1em;
+    font-weight: bold;
+    display: inline-block;
+}
