--- a/oc-modal.less
+++ b/oc-modal.less
@@ -1,5 +1,8 @@
 #oc-modal-box {
-
+    font-family: 'sans-serif';
+    font-weight: normal;
+    font-size: 14px;
+    color: black !important;
     width: 600px;
     margin: 20% auto;
     background: rgba(255, 255, 255, 0.8);
